--- a/public/index.html
+++ b/public/index.html
@@ -469,7 +469,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass1-1">
       <button onclick="checkPassword('pass1-1','link1-1')">Access Resource</button>
       <div id="link1-1" class="hidden">
-        <a href="https://drive.google.com/drive/folders/XXXX1" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/1CbouoMC43KGg7zyXWnNywZ2bAYOy9iKr/view?usp=sharing" target="_blank">Open Drive Folder</a>
       </div>
     </div>
 
@@ -478,7 +478,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass1-2">
       <button onclick="checkPassword('pass1-2','link1-2')">Access Resource</button>
       <div id="link1-2" class="hidden">
-        <a href="https://drive.google.com/drive/folders/XXXX2" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/1ltIipPAZ8elumdvgyqKpxu8XCqL6_eXP/view?usp=sharing" target="_blank">Open Drive Folder</a>
       </div>
     </div>
 
@@ -487,7 +487,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass1-3">
       <button onclick="checkPassword('pass1-3','link1-3')">Access Resource</button>
       <div id="link1-3" class="hidden">
-        <a href="https://drive.google.com/drive/folders/XXXX3" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/1QzZ6mNosMo2egQSgCjRLLLcPqPlE9I42/view?usp=sharing" target="_blank">Open Drive Folder</a>
       </div>
     </div>
 
@@ -496,7 +496,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass1-4">
       <button onclick="checkPassword('pass1-4','link1-4')">Access Resource</button>
       <div id="link1-4" class="hidden">
-        <a href="https://drive.google.com/drive/folders/XXXX4" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/10Wh0QbCq90jsvXuj6rnGHjirP1PUUFBy/view?usp=sharing" target="_blank">Open Drive Folder</a>
       </div>
     </div>
 
@@ -505,7 +505,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass1-5">
       <button onclick="checkPassword('pass1-5','link1-5')">Access Resource</button>
       <div id="link1-5" class="hidden">
-        <a href="https://drive.google.com/drive/folders/XXXX5" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/1EtniCniCAMIjoklprh0BGEuYWLkyeNCr/view?usp=sharing" target="_blank">Open Drive Folder</a>
       </div>
     </div>
 
@@ -515,7 +515,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass2-1">
       <button onclick="checkPassword('pass2-1','link2-1')">Access Resource</button>
       <div id="link2-1" class="hidden">
-        <a href="https://drive.google.com/drive/folders/YYY1" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/1PRsC6iB5kV0HF7ixvpaJ6drly34OjVxY/view?usp=sharing" target="_blank">Open Drive Folder</a>
       </div>
     </div>
 
@@ -524,7 +524,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass2-2">
       <button onclick="checkPassword('pass2-2','link2-2')">Access Resource</button>
       <div id="link2-2" class="hidden">
-        <a href="https://drive.google.com/drive/folders/YYY2" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/1fO9pufoWMjDG6NJlPzkPxDEkdvjMbIxf/view?usp=sharing" target="_blank">Open Drive Folder</a>
       </div>
     </div>
 
@@ -533,7 +533,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass2-3">
       <button onclick="checkPassword('pass2-3','link2-3')">Access Resource</button>
       <div id="link2-3" class="hidden">
-        <a href="https://drive.google.com/drive/folders/YYY3" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/15baZ68pcNHCKip54oOKNy9ByuU-GbtEw/view?usp=sharing" target="_blank">Open Drive Folder</a>
       </div>
     </div>
 
@@ -542,7 +542,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass2-4">
       <button onclick="checkPassword('pass2-4','link2-4')">Access Resource</button>
       <div id="link2-4" class="hidden">
-        <a href="https://drive.google.com/drive/folders/YYY4" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/1c6c0u8ztbps1OAG_RWWdb9y2Y7qMs_9R/view?usp=sharing" target="_blank">Open Drive Folder</a>
       </div>
     </div>
 
@@ -551,7 +551,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass2-5">
       <button onclick="checkPassword('pass2-5','link2-5')">Access Resource</button>
       <div id="link2-5" class="hidden">
-        <a href="https://drive.google.com/drive/folders/YYY5" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/1CApMaJYvngFjdruzTPHxDwt9mk_LL5lW/view?usp=sharing" target="_blank">Open Drive Folder</a>
       </div>
     </div>
 
@@ -560,7 +560,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass2-6">
       <button onclick="checkPassword('pass2-6','link2-6')">Access Resource</button>
       <div id="link2-6" class="hidden">
-        <a href="https://drive.google.com/drive/folders/YYY6" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/1vRS6PJjIQUdbnmVbP82OESh_znDZajwS/view?usp=sharing" target="_blank">Open Drive Folder</a>
       </div>
     </div>
 
@@ -569,7 +569,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass2-7">
       <button onclick="checkPassword('pass2-7','link2-7')">Access Resource</button>
       <div id="link2-7" class="hidden">
-        <a href="https://drive.google.com/drive/folders/YYY7" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/1MuXbqqZGUW-qxtThNJS-lsk0NzhddF4q/view?usp=sharing" target="_blank">Open Drive Folder</a>
       </div>
     </div>
 
@@ -578,7 +578,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass2-8">
       <button onclick="checkPassword('pass2-8','link2-8')">Access Resource</button>
       <div id="link2-8" class="hidden">
-        <a href="https://drive.google.com/drive/folders/YYY8" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/1wtk9wtB3h0jscAA1XJy-fxT5DayCq1pq/view?usp=sharing" target="_blank">Open Drive Folder</a>
       </div>
     </div>
 
@@ -587,7 +587,7 @@ footer {
       <input type="password" placeholder="Enter password" id="pass2-9">
       <button onclick="checkPassword('pass2-9','link2-9')">Access Resource</button>
       <div id="link2-9" class="hidden">
-        <a href="https://drive.google.com/drive/folders/YYY9" target="_blank">Open Drive Folder</a>
+        <a href="https://drive.google.com/file/d/12zowVlzlcCZ6e5pwpm0kRPQWc8xvgK9V/view?usp=sharing" target="_blank">Open Drive Folder</a>
       </div>
     </div>
   </div>
